# symbol-matching-bedrock

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
exports/yolo_region_proposals_train_matched/: summary.txt
scripts/: export_dino_onnx.py  yolo_region_viz.py
src/symbol_matching/: __init__.py  cli.py  dinov3_rerank.py  exemplar.py  gpu_memory.py  matcher.py  models.py  ort_session.py  pdf.py  pipeline.py  region_proposal.py  sam3.py  sam3_engine.py  scope.py  tiling.py  viz.py
tests/: test_dino_onnx.py  test_exemplar_crop.py  test_matcher.py  test_matcher_parallel.py  test_matcher_template_equivalence.py  test_matcher_tiling.py  test_models_bbox.py  test_region_onnx.py
