[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symbol-matching-poc"
version = "0.1.0"
description = "Symbol matching across PDF drawing pages (template + DINOv3 ONNX)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "numpy>=1.24",
    "onnxruntime-gpu>=1.17",
    "opencv-python-headless>=4.8",
    "pillow>=10",
    "pydantic>=2.5",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.28,<1.41",
    "streamlit-drawable-canvas>=0.9.3",
]
export = [
    "huggingface-hub>=0.26.0",
    "onnx>=1.16",
    "torch>=2.2",
    "transformers>=4.51.0",
    "ultralytics>=8.4",
]
dev = ["pytest>=7.4"]

[project.scripts]
symbol-match = "symbol_matching.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: loads ONNX weights (run with pytest -m integration)",
]
